--- a/style.css
+++ b/style.css
@@ -18,15 +18,43 @@ body{
     width: 400px;
     height: 600px;
     background-color: rgb(200, 200, 200);
+    padding: 5px;
 }
 
 .calculadora .resultado{
+    display: flex;
+    align-items: end;
+    justify-content: right;
     width: 100%;
     height: 20%;
-    background-color: aqua;
+    background-color: rgb(98, 98, 98);
+}
+
+.calculadora .resultado p{
+    color: white;
+    font-size: 3em;
+    font-weight: 600;
+    padding: 5px;
 }
 
 .calculadora .buttons{
+    height: 80%;
     display: grid;
-    
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    gap: 3px;
+}
+
+.calculadora .buttons button{
+    height: 90px;
+    cursor: pointer;
+    font-size: 1.8em;
+    font-weight: 500;
+}
+
+.calculadora .buttons .red{
+    color: red;
+}
+
+.calculadora .buttons .zero{
+    grid-column: span 2;
 }
